--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -7,6 +7,7 @@
   .card-title{
     .card-image{
       width: 100%;
+      height: 30vh;
     }
   }
   .card-title{
@@ -23,11 +24,10 @@
       padding: 10px;
     }
   }
-  .btn{
-    text-align: center;
-    margin-bottom:1rem;
-  }
+
   .btn-product{
+    width: 100%;
+
     background-color: #232323;
     color:white;
     border:none;
